--- a/framework/css/main.css
+++ b/framework/css/main.css
@@ -80,7 +80,41 @@
     width: 100%;
 }
 
+
+
+#navbar a {
+    text-decoration: none;
+    display: inline;
+    list-style: none;
+    color: black;
+    /*margin: 100px;*/
+
+  }
+
+
+
+
+
+#navbar a:hover {
+    color: red;
+
+}
+
+
+li {
+    display: inline;
+    padding: 20px;
+   text-align: left;
+
+}
+
 ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
+}
+
+li:first-child {
+padding: 0px;
+
+}
